--- a/TestPictureBrowser/CustomSearchControl.xaml
+++ b/TestPictureBrowser/CustomSearchControl.xaml
@@ -3,35 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" d:DesignHeight="38" d:DesignWidth="350" x:Name="SearchUserControl" KeyDown="CustomSearchControl_OnKeyDown">
+             mc:Ignorable="d" d:DesignHeight="38" d:DesignWidth="350" 
+             KeyDown="CustomSearchControl_OnKeyDown">
     <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Themes/Generic.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-            
-            <Storyboard x:Key="StoryboardHide">
-                <DoubleAnimation Storyboard.TargetName="SearchUserControl" Storyboard.TargetProperty="Opacity" From="0.8" To="0.1" Duration="0:0:5"/>
-            </Storyboard>
-
-            <!-- 关闭按钮模板 -->
-            <ControlTemplate x:Key="BtnCloseTemplate" TargetType="{x:Type Button}">
-                <Border BorderThickness="0" Background="Transparent">
-                    <Image x:Name="ImgClose" Width="20" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center"
-                       Source="Themes/Image/Close.png"/>
-                </Border>
-
-                <ControlTemplate.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter TargetName="ImgClose" Property="Source" Value="Themes/Image/Close_Hover.png" />
-                    </Trigger>
-                    <Trigger Property="IsPressed" Value="True">
-                        <Setter TargetName="ImgClose" Property="Source" Value="Themes/Image/Close_Press.png" />
-                    </Trigger>
-                </ControlTemplate.Triggers>
-            </ControlTemplate>
-            
-        </ResourceDictionary>
+        <ResourceDictionary Source="Themes/Generic.xaml"/>
     </UserControl.Resources>
     
     <Border Background="#FFE0E0E1" Height="38" Width="354" Opacity="0.8" CornerRadius="3" BorderThickness="2" BorderBrush="#FFC1C1C1">
