--- a/TestPictureBrowser/Themes/Generic.xaml
+++ b/TestPictureBrowser/Themes/Generic.xaml
@@ -1,10 +1,9 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:TestPictureBrowser">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Style/ListBoxItem.xaml"/>
-        <ResourceDictionary Source="Style/Button.xaml"/>
+        <ResourceDictionary Source="../Themes/Style/Button.xaml"/>
+        <ResourceDictionary Source="../Themes/Style/Image.xaml"/>
+        <ResourceDictionary Source="../Themes/Style/ListBoxItem.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-    
 </ResourceDictionary>
